# wasm-aot

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md
app/: CSbuild.sh  app.c  app.rs  app.wasm  app.wat  branch-test.wasm.h  branch-testi.wat  build-c-raw.sh  build-rust-raw.sh  build-rust-wasi.sh  client.c  client.wasm  client.wasm.h  client.wat  hello.c  hello.wasm  hello.wasm.h  riot_api.rs  riotstubs.txt  server.c  server.wasm  server.wat  sort.c  sort.wasm  sort.wat  test copy 2.wat  test copy 3.wat  test copy.wat  test-cal.wasm  test-cal.wasm.h  test-cal.wat  test-cali.wat  test.wasm  test.wasm.h  test.wat  testi.wat  wasi.c  wasi.rs  wasi.wasm  wasi.wasm.h  (+1 more)
app/benchmark/: CMakeLists.txt  benchmark.c  benchmark.h  binsrch.S  binsrch.c  binsrch.c.wasm  binsrch.c.wat  binsrch.elf  binsrch.wasm  binsrch.wasm.h  binsrch.wasm.wat  bsort.c  bsort.c.wasm  bsort.c.wat  bsort.elf  bsort.wasm  bsort.wasm.h  bsort.wasm.wat  clear.sh  compile.sh  count.sh  fft.elf  fft.wasm  fft.wasm.h  fft.wasm.wat  fillarray.c  fillarray.c.wasm  fillarray.c.wat  fillarray.elf  fillarray.wasm  fillarray.wasm.h  fillarray.wasm.wat  funcall.c  funcall.c.wasm  funcall.c.wat  funcall.elf  funcall.wasm  funcall.wasm.h  funcall.wasm.wat  heatcalib.elf  (+40 more)
app/benchmark/bm-fannkuch/: fannkuch.c
app/benchmark/bm-fft/: fft.c  javax_rtcbench_RTCBenchmark.c
app/benchmark/bm-heat_calib/: heat_calib.c  heat_calib.h  heat_sensor_data.c  heat_sensor_data.h  javax_rtcbench_RTCBenchmark.c
app/benchmark/bm-heat_detect/: heat_calib.c  heat_calib.h  heat_detect.c  heat_detect.h  heat_sensor_data.c  heat_sensor_data.h  javax_rtcbench_RTCBenchmark.c
app/benchmark/bm-image/: main.c
app/benchmark/bm-lec/: javax_rtcbench_RTCBenchmark.c  lec.c
app/benchmark/bm-motetrack/: EstimateLoc.h  MobileMoteM.c  MoteTrackParams.h  Point.h  RFSignalAvgHT.h  RefSignature.h  RefSignatureDB.c  RefSignatureDB.h  SignatureDB.c  SignatureDB.h  debugRFSignalAvgHT.c  debugSignature.c  motetrack.c  motetrack.h
app/benchmark/bm-outlier/: javax_rtcbench_RTCBenchmark.c  outlier32u.c
app/benchmark/bm-pi/: pi.c
app/benchmark/bm-wavelet/: main.c  wavelet.c  wavelet.h
app/benchmark/utils/: benchmark.c
app/wasmer-test/: instance.py
include/: AvroraPrint.h  app.wasm.h  asm.h  compile.h  debug.h  heap.h  instructions.h  memory.h  rtc_emit.h  safety_check.h  types.h  user_import.h  utils.h  wkreprog.h  wkreprog_impl.h
libs/: .malloc.csv  CMakeCache.txt  Makefile  atemp.csv  avrora.sh  binsrch.malloc.csv  binsrch.malloc.txt  binsrch.nativeoutput.txt  binsrch.txt  binsrch.wasmoutput.txt  bsort.malloc.csv  bsort.malloc.txt  bsort.nativeoutput.txt  bsort.wasmoutput.txt  cmake_install.cmake  count.sh  count_malloc  count_malloc.sh  fannkuch.nativeoutput.txt  fannkuch.wasmoutput.txt  fft.malloc.csv  fft.malloc.txt  fft.nativeoutput.txt  fft.wasmoutput.txt  fillarray.malloc.csv  fillarray.malloc.txt  fillarray.nativeoutput.txt  fillarray.wasmoutput.txt  fillarray.wasmoutput.txt.ins  funcall.malloc.csv  funcall.malloc.txt  funcall.nativeoutput.txt  funcall.wasmoutput.txt  funcall.wasmoutput.txt.ins  heatcalib.malloc.csv  heatcalib.malloc.txt  heatcalib.nativeoutput.txt  heatcalib.wasmoutput.txt  heatdetect.malloc.csv  heatdetect.malloc.txt  (+41 more)
libs/result/: binsrch.wasmoutput.txt  bsort.wasmoutput.txt  cape_base_binsrch.txt.ins  cape_base_binsrch_test.txt  cape_base_bsort.txt.ins  cape_base_fillarray.txt  cape_base_fillarray.txt.ins  cape_base_funcall.txt.ins  cape_base_hsort.txt  cape_base_hsort.txt.ins  cape_base_lec.txt.ins  cape_mark_binsrch.txt.ins  cape_mark_bsort.txt.ins  cape_mark_fillarray.txt  cape_mark_fillarray.txt.ins  cape_mark_funcall.txt  cape_mark_funcall.txt.ins  cape_mark_hsort.txt.ins  cape_mark_lec.txt.ins  count_instrction.sh  fillarray.wasmoutput.txt  funcall.wasmoutput.txt  hsort.wasmoutput.txt  lec.wasmoutput.txt  test.wasmoutput.txt
libs/wamr/: binsrch.txt  bsort.txt  fft.txt  fillarray.txt  funcall.txt  heatcalib.txt  heatdetect.txt  hsort.txt  lec.txt  motetrack.txt  outlier.txt
libs/wasm3/: binsrch.txt  bsort.txt  fft.txt  fillarray.txt  funcall.txt  heatcalib.txt  heatdetect.txt  hsort.txt  lec.txt  motetrack.txt  outlier.txt
others/: core.c  core.h  heap.c  heap.h  instructions.c  myheap.c  myheap.h  rtc_emit.c  rtc_emit.h  wkreprog_impl.c  wkreprog_impl.h
runtime-benchs/: README.en.md  README.md
runtime-benchs/esp32-micropython/: binsrch.py  bsort.py  fft.py  fillarray.py  heatcalib.py  heatdetect.py  hsort.py  outlier.py  pi.py
runtime-benchs/esp32-native/benchmark/: CMakeLists.txt  sdkconfig
runtime-benchs/esp32-native/benchmark/main/: CMakeLists.txt  binsrch.c  bsort.c  fillarray.c  hsort.c  main.c  measure.h  pi.c
runtime-benchs/esp32-native/bm-fft/main/:  javax_rtcbench_RTCBenchmark.c  CMakeLists.txt  fft.c
runtime-benchs/esp32-native/bm-heatcalib/: heat_sensor_data.h
runtime-benchs/esp32-native/bm-heatcalib/main/:  javax_rtcbench_RTCBenchmark.c  CMakeLists.txt  heat_calib.c  heat_calib.h
runtime-benchs/esp32-native/bm-heatdetect/: CMakeLists.txt
runtime-benchs/esp32-native/bm-heatdetect/main/:  javax_rtcbench_RTCBenchmark.c  CMakeLists.txt  heat_calib.c  heat_calib.h  heat_detect.c  heat_detect.h  heat_sensor_data.c  main.c  measure.h
runtime-benchs/esp32-native/bm-lec/main/: fft.c  (+1 more)
runtime-benchs/javascript/: binsrch.js  bsort.js  fft.js  fillarray.js  heatcalib.js  hsort.js  lec.js  outlier.js  pi.js
runtime-benchs/x86-native-wasm/: CMakeLists.txt  binsrch.c  bsort.c  fft.c  fillarray.c  heatcalib.c  heatdetect.c  hsort.c  image.c  main.c  measure.c  measure.h  outlier.c  pi.c  wavelet.c
src/: asm.c  compile.c  debug.c  heap.c  instructions.c  main.c  memory.c  parse.c  rtc_emit.c  test.c  user_import.c  utils.c  wkreprog_impl.c
utils/: a.out  binsrch.wasmoutput.txt.ins  bsort.wasmoutput.txt.ins  count_ins.cpp  count_malloc.cpp  lec.wasmoutput.txt.ins
utils/resultsets_baseline/: complete_summary__0BASE_R___P__C0_A0_S0_G1_NOLW
utils/resultsets_baseline/results_0BASE_R___P__C0_A0_S0_G1_NOLW/: binsrch32.txt  binsrch32.xml  bsort32.txt  bsort32.xml
(+48 files in other folders)
